# iscore-addon-image

./: CMakeLists.txt  iscore_addon_image.cpp  iscore_addon_image.hpp  score_addon_image.cpp  score_addon_image.hpp
ImageProcess/: ImageFactory.hpp  ImageLayerModel.cpp  ImageLayerModel.hpp  ImageLayerSerialization.cpp  ImageModel.cpp  ImageModel.hpp  ImagePanelProxy.cpp  ImagePanelProxy.hpp  ImagePresenter.cpp  ImagePresenter.hpp  ImageProcessMetadata.hpp  ImageSerialization.cpp  ImageView.cpp  ImageView.hpp  ScaleMode.hpp
ImageProcess/Commands/: ImageCommandFactory.cpp  ImageCommandFactory.hpp  SetImage.cpp  SetImage.hpp
ImageProcess/Inspector/: ImageInspectorFactory.cpp  ImageInspectorFactory.hpp  ImageInspectorWidget.cpp  ImageInspectorWidget.hpp
